--- a/config/config.ini
+++ b/config/config.ini
@@ -4,7 +4,10 @@ database.host = 192.168.1.66
 database.name = nextgisweb
 database.user = nextgisweb
 database.password = nextgis
-sdir = ./data
+sdir = /opt/nextgis/data
+# i18n
+locale.external_path = /opt/nextgis/package/nextgisweb_i18n
+locale.poeditor.project_id = 435991
 
 [environment]
 compoent.social = false
