--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,11 +1,13 @@
 [uwsgi]
 http = 0.0.0.0:8080
 master = true
-processes = 4
+processes = 8
 lazy-apps = true
 enable-threads = true
 paste = config:%p
 env = NEXTGISWEB_CONFIG=%d/config/config.ini
+harakiri = 3600
+http-timeout = 3600
 
 [app:main]
 use = egg:nextgisweb
