--- a/Dockerfile_proxy
+++ b/Dockerfile_proxy
@@ -1,5 +1,10 @@
 FROM ubuntu:22.04 as build
 
+# if you need a proxy , exec "docker build  -t {image} . --network host"
+# or remove it.
+ENV http_proxy http://192.168.1.111:1080
+ENV https_proxy http://192.168.1.111:1080
+
 ENV DEBIAN_FRONTEND noninteractive
 ENV NEXTGISWEB_CONFIG /opt/nextgis/config/config.ini
 
@@ -68,6 +73,10 @@ RUN mkdir -p /opt/node \
 FROM ubuntu:22.04
 EXPOSE 8080
 
+# if you need a proxy , exec "docker build  -t {image} . --network host"
+# or remove it.
+ENV http_proxy http://192.168.1.111:1080
+ENV https_proxy http://192.168.1.111:1080
 ENV DEBIAN_FRONTEND noninteractive
 ENV NEXTGISWEB_CONFIG /opt/nextgis/config/config.ini
 
@@ -81,6 +90,8 @@ RUN apt update && apt install python3 python3-dev python3-virtualenv curl \
     && apt-get remove --auto-remove -y python3-pip \
     && unset http_proxy && unset https_proxy
 
+ENV http_proxy  ""
+ENV https_proxy  ""
 WORKDIR /opt/nextgis
 ENV VIRTUAL_ENV="/opt/nextgis/env"
 ENV PATH="/opt/node/bin:/opt/nextgis/env/bin:$PATH"
