--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,20 +11,19 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      SUPER_SECRET: ${{ secrets.DOCKER_USERNAME }}
+    environment: DOCKER_ACCOUNT
     steps:
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.TOKEN }}
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
         echo "$SUPER_SECRET"
         docker build . --file Dockerfile --tag vinsonws/nextgisweb:$(date +%Y%m%d)
-      
-    - name: Docker Login
-      uses: docker/login-action@v2.1.0
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+
     - name: Push
       run: | 
         docker push vinsonws/nextgisweb:$(date +%Y%m%d)
